--- a/frontend/src/sass/pages/_app.scss
+++ b/frontend/src/sass/pages/_app.scss
@@ -57,6 +57,7 @@
 	position: relative;
 	border: 2px solid red;
 	padding: 1em;
+	overflow: hidden;
 }
 
 .main-navbar {
