--- a/frontend/src/sass/pages/_profile.scss
+++ b/frontend/src/sass/pages/_profile.scss
@@ -4,7 +4,6 @@
 .profile {
 	margin: auto;
 	width: 70%;
-	max-height: 100%;
 	overflow: auto;
 	padding: 1em;
 
